{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "f1a2d6db-109c-48cd-a9c6-0b85a19e9692",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "c9fc0483-2c65-4225-9db0-fd6e7304abbc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "7c75efbe-cbc3-4139-b02d-519ceba226b6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a0f1700-a831-488b-bf63-87cb99789d89",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98c59a56-536a-4a12-9f17-94dee61e045a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec8a0c07-9580-40e5-bf67-053b7f589f40",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}